syntax = "proto3";

option java_package = "com.github.binodsh";
option java_multiple_files = true;

service Hello {
    rpc SayHello (HelloRequest) returns (HelloResponse){}
}

package grpcjavasample;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}